@@ -1,4 +1,4 @@
-#!/usr/bin/env ruby1.9
+#!/usr/bin/env ruby
 
 $LOAD_PATH.unshift(File.dirname(__FILE__) + "/../lib")
 
