@@ -53,11 +53,11 @@ context "PDF::Reader" do
 
   specify "should process text from a german PDF correctly" do
     receiver = PageTextReceiver.new
+    str = "Dit\302\240is\302\240een\302\240pdf\302\240test\302\240van\302\240drie\302\240pagina’s.\302\240\302\240Pagina\302\2401"
     PDF::Reader.file(File.dirname(__FILE__) + "/data/german.pdf", receiver)
 
     # confirm the text appears on the correct pages
-    puts receiver.content.inspect
     receiver.content.size.should eql(3)
-    receiver.content[0].should eql("boo")
+    receiver.content[0][0,str.size].should eql(str)
   end
 end
