@@ -106,7 +106,7 @@ EOF
     xref = PDF::Reader::XRef.new(buffer)
     xref =     PDF::Reader::XRef.new(buffer)
     xref.xref[30] = Hash.new
-    xref.xref[30][0] = 64379 
+    xref.xref[30][0] = 64379
     ref =      PDF::Reader::Reference.new(30,0)
     lambda { obj, stream = xref.object(ref) }.should raise_error(PDF::Reader::MalformedPDFError)
 
@@ -114,17 +114,18 @@ EOF
     #       then replace the the above raise_error check with the following 2 checks
     #obj.should be_a_kind_of(Hash)
     #stream.should eql(decoded_stream.strip)
-    
+
   end
 
   specify "should parse a string correctly" do
-    parse_string("this is a string)").string.should eql("this is a string") 
+    parse_string("this is a string)").string.should eql("this is a string")
     parse_string("this \\n is a string)").string.should eql("this \n is a string")
     parse_string("x \\t x)").string.should eql("x \t x")
     parse_string("x \\101 x)").string.should eql("x A x")
     parse_string("x \\( x)").string.should eql("x ( x")
     parse_string("(x)))").string.should eql("(x)")
     parse_string("Adobe)").string.should eql("Adobe")
+    parse_string("!\"%1)").string.should eql("!\"%1")
     str = <<EOT
 x
 x \
@@ -134,11 +135,11 @@ EOT
   end
 
   specify "should parse a hex string correctly" do
-    parse_string("48656C6C6F>").hex_string.should eql("Hello") 
+    parse_string("48656C6C6F>").hex_string.should eql("Hello")
   end
 
   specify "should ignore whitespace when parsing a hex string" do
-    parse_string("48656C6C6F20\n4A616D6573>").hex_string.should eql("Hello James") 
+    parse_string("48656C6C6F20\n4A616D6573>").hex_string.should eql("Hello James")
   end
 
   specify "should parse various dictionaries correctly" do
@@ -146,12 +147,12 @@ EOT
     dict = parse_string(str).dictionary
 
     dict.size.should eql(3)
-    dict["Registry"].should    eql("Adobe") 
+    dict["Registry"].should    eql("Adobe")
     dict["Ordering"].should    eql("Japan1")
     dict["Supplement"].should  eql(5.0)
   end
 
   specify "should parse an array correctly" do
-    parse_string("10 0 R 12 0 R ]").array.size.should eql(2) 
+    parse_string("10 0 R 12 0 R ]").array.size.should eql(2)
   end
 end
