@@ -2,6 +2,7 @@ v0.6.3 (xxx)
 - Improved support for converting text in some PDF files to unicode
 - Behave as expected if the Contents key in a Page Dict is a reference
 - Include some basic metadata callbacks
+- Don't interpret a comment token (%) inside a string as a comment
 
 v0.6.2 (22nd March 2008)
 - Catch low level errors when applying filters to a content stream and raise a MalformedPDFError instead. 
